examples/ingress/myapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-internal-service
spec:
  selector:
    app: myapp
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
